Source code/XMLParser.g4
parser grammar XMLParser;
options { tokenVocab=XMLLexer; }

document    :   prolog? misc* element misc*;

prolog      :   XMLDeclOpen attribute* SPECIAL_CLOSE ;

element     :   '<' Name attribute* '>' '<' '/' Name '>'   
            |   '<' Name attribute* '>' chardata? ((element | reference | CDATA | PI | COMMENT) chardata?)* '<' '/' Name '>'
            |   '<' Name attribute* '/>'
            ;

reference   :   EntityRef | CharRef ;

attribute   :   Name '=' STRING ; // Our STRING is AttValue in spec
/** ``All text that is not markup constitutes the character data of
 *  the document.''
 */
chardata    :   TEXT | SEA_WS ;

misc        :   COMMENT | PI | SEA_WS ;
